# MetaMut

./: .gitignore  README.md  bugs.md  mutators.md
MetaMut/: CMakeLists.txt  README.md
MetaMut/include/: Mutator.h
MetaMut/scripts/: AzureAPI.py  FakeAPI.py  GPTAPI.py  MutGen.py  Replay.py  check.py  configs.py  main.py
MetaMut/scripts/llm/: GPT.py
MetaMut/scripts/metamut/: Driver.py  MutatorExecutor.py  MutatorGenerator.py
MetaMut/stages/: Example-1.txt  ImplMutator-1.txt  RefineMutator-1.txt
MetaMut/stages/notes/: ChangeBinop.cpp  ChangeDeclRef.cpp
mutators/supervised/: CMakeLists.txt  afl.cc  main.cc
mutators/supervised/include/: Mutator.h  MutatorManager.h
mutators/supervised/include/Decl/: AddInitialization.h  ChangeDeclType.h  ChangeFieldDeclType.h  ChangeParamScope.h  ChangeVarDeclQualifier.h  ChangeVarDeclScope.h  CombineVariable.h  RemoveInitialization.h  RemoveUnusedVariable.h
mutators/supervised/include/Expr/: AddSuffixUnaryOp.h  AggregateMemberToScalarVariable.h  ChangeCharLiteral.h  ChangeDeclRef.h  ChangeFloatLiteral.h  ChangeIntegerLiteral.h  ChangeReturnValue.h  CopyExpr.h  CopyPropagation.h  DecaySmallStruct.h  DuplicateWithBinaryOp.h  DuplicateWithUnaryOp.h  FlattenArray.h  IncreaseArrayDimension.h  IncreasePointerLevel.h  LiftLogicalSubExpr.h  MutateBinaryExprOpcode.h  MutateSuffixUnaryOp.h  MutateUnaryExprOpcode.h  RandomCopyPropagation.h  RandomizeStringLiteral.h  ReduceArrayDimension.h  ReducePointerLevel.h  RemoveSuffixUnaryOp.h  RemoveUnaryExprOpcode.h  SwapChildExpr.h  SwapExpr.h
mutators/supervised/include/Func/: ChangeParmType.h  ChangeReturnType.h  DecayBodyToReturn.h  DuplicateParameter.h  InlineFunctionReversal.h  RemoveParameter.h  RemoveUnusedFunction.h  RemoveUnusedParameter.h  ShuffleParameters.h  SimpleInliner.h  SimpleUninliner.h
mutators/supervised/include/Stmt/: ChangeLoopType.h  DuplicateStatement.h  GroupStmtsIntoCompound.h  IfToGoto.h  IfToSwitch.h  ModifyForLoopIncrement.h  (+9 more)
mutators/supervised/lib/: Mutator.cc  MutatorManager.cc
(+464 files in other folders)
